--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,7 @@
                     <!-- Place favicon.ico and apple-touch-icon.png in the root directory
                     -->
                     <link rel="stylesheet" href="css/bootstrap.min.css">
-                    <script src="js/vendor/modernizr-2.6.2.min.js">
+                    <script src="js/modernizr-2.6.2.min.js">
                                                             
                     </script>
                 </head>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <script>
-                                                            window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')
+                                                            window.jQuery || document.write('<script src="js/jquery-1.8.2.min.js"><\/script>')
                     </script>
                     <script src="js/plugins.js">
                                                             
