--- a/website/index.html
+++ b/website/index.html
@@ -43,6 +43,14 @@
                         </p>
                     <![endif]-->
                     <div class="row">
+                        <div class="span4">
+                            <form class="form-inline">
+                                <input type="text" placeholder="URL" id="cacheUrl"/>
+                                <input type="button" class="btn btn-success" value="Load"/>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="span3">
                             <ul id="cacheNames" class="nav nav-tabs nav-stacked">
                             </ul>
