Implement URL field, add sitecore pages

--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
                         <div class="span4">
                             <form class="form-inline">
                                 <input type="text" placeholder="URL" id="cacheUrl"/>
-                                <input type="button" class="btn btn-success" value="Load"/>
+                                <input type="button" class="btn btn-success" value="Load" id="btnUrl"/>
                             </form>
                         </div>
                     </div>
